# VideoScribe

./: .env.example  .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  SettingsWindow.tsx  index.css  main.tsx
src-backend/: cli.py  main.py  pyproject.toml  videoscribe-backend.spec
src-backend/videoscribe/: worker.py
src-backend/videoscribe/application/: pipeline.py  segment_refiner.py  transcript_assembler.py  transcription_job.py
src-backend/videoscribe/domain/: interfaces.py  ipc_models.py  models.py  prompt_registry.py  transcription_options.py
src-backend/videoscribe/infrastructure/audio/mss/: audio_separator_engine.py  factory.py
src-backend/videoscribe/infrastructure/audio/vad/: factory.py  silero_analyzer.py
src-backend/videoscribe/infrastructure/recognizers/: faster_whisper_engine.py  faster_whisper_recognizer.py
src-backend/videoscribe/infrastructure/reporters/: ipc_reporter.py  json_stdout_reporter.py  sse_reporter.py
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/application/: language_service.rs  mod.rs  stt_job_controller.rs  translation_coordinator.rs
src-tauri/src/commands/: mod.rs  project.rs  stt.rs  translation.rs
src-tauri/src/commands/language/: japanese.rs
src-tauri/src/domain/: ipc_models.rs  language.rs  mod.rs  project.rs  stt_job.rs
src-tauri/src/infrastructure/: config.rs  mod.rs  state.rs
src-tauri/src/infrastructure/agent/: agent_logger.rs
src-tauri/src/infrastructure/agents/translator_agent/: prompts.rs
src-tauri/src/infrastructure/plugins/: mod.rs
src-tauri/src/infrastructure/plugins/japanese/: dictionary.rs  mod.rs  tokenizer.rs
src-tauri/src/infrastructure/providers/: local_stt.rs
src/components/layout/: SettingsPanel.tsx  SettingsTitleBar.tsx  Sidebar.tsx  TitleBar.tsx
src/components/player/: VideoControls.tsx  VideoEmptyState.tsx  VideoPlayer.tsx
src/components/player/subtitle/: SubtitleLineRenderer.tsx  SubtitleModels.ts  SubtitleRenderer.tsx  SubtitleTokenRenderer.tsx  plugin_types.ts
src/components/player/subtitle/plugins/: DictionaryPlugin.tsx  FuriganaPlugin.tsx  KaraokePlugin.tsx  TranslationPlugin.tsx
src/components/settings/: SettingControls.tsx
src/components/stt/: DictionaryTooltip.tsx  STTPanel.tsx  STTProcessingOverlay.tsx  STTTranslationOverlay.tsx
src/components/ui/: Dropzone.tsx  Notify.tsx  Select.tsx  Toggle.tsx  Tooltip.tsx
src/hooks/: useAppEvents.ts
src/multiagent/agents/TranslatorAgent/: index.ts
src/multiagent/providers/: OllamaProvider.ts  ProviderFactory.ts  VertexAIProvider.ts
src/services/: sttService.ts  translationService.ts  videoLoaderService.ts
src/store/: appStore.ts  notifyStore.ts  sttJobStore.ts  sttSettingsStore.ts  sttStore.ts  videoStore.ts
src/types/: app_types.ts  bindings.ts
src/utils/: logger.ts  time.ts
