[project]
name = "src-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "audio-separator>=0.20.0",
    "ctranslate2",
    "fastapi",
    "faster-whisper",
    "numpy<2.5",
    "nvidia-cublas-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "pydantic",
    "sse-starlette",
    "torch>=2.6.0.dev0",
    "torchvision>=0.21.0.dev0",
    "torchaudio>=2.6.0.dev0",
    "uvicorn",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.25.0.15",
]

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'win32'"]

[tool.uv.sources]
torch = [{ index = "pytorch-nightly" }]
torchvision = [{ index = "pytorch-nightly" }]
torchaudio = [{ index = "pytorch-nightly" }]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true
