[package]
name = "videoscribe"
version = "0.1.0"
description = "VideoScribe Application"
authors = ["you"]
edition = "2021"
default-run = "videoscribe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "videoscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
lindera = { version = "3.0.7", features = ["embed-ipadic"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2"
specta = { version = "=2.0.0-rc.25", features = ["serde_json"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["javascript", "typescript"] }
specta-typescript = "=0.0.12"
ts-rs = "12.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
dotenvy = "0.15"
eventsource-stream = "0.2"
futures-util = "0.3"
chrono = "0.4"
thiserror = "2.0"
lazy_static = "1.5"
uuid = { version = "1.24.0", features = ["v4", "fast-rng"] }
reqwest-eventsource = "0.6.0"


